--- a/css/_home.scss
+++ b/css/_home.scss
@@ -1,44 +1,57 @@
-.container-de-texto-home {
+#home {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    height: 70vh;
-    width: 40vw;
-    text-align: center;
-    padding: 5px;
+    padding: 10px;
     color: $color02;
 
-    .texto-home {
-        height: 100%;
-        min-width: 275px;
-        max-width: 295px;
+    .container-da-home {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
 
-        h1 {
-            font-size: 4rem;
-            margin-bottom: 30px;
+        .texto-home {
+            text-align: center;
+            min-width: 275px;
+            max-width: 50%;
+            padding: 0px 8%;
+
+            h1 {
+                font-size: 5rem;
+                margin-bottom: 10%;
+            }
+
+            p {
+                font-size: 2.5rem;
+                margin-bottom: 20%;
+            }
         }
 
-        p {
-            font-size: 1.5rem;
+        button {
+            font-size: 2.5rem;
+            min-height: 60px;
+            min-width: 275px;
+            border-radius: 40px;
+            background: $color05;
+
+            &:hover {
+                background: lighten($color05, $amount: 10);
+            }
         }
     }
 
-    button {
-        font-size: 1.5rem;
-        height: 80px;
-        min-width: 275px;
-        width: 20vw;
-        border-radius: 40px;
-        background: $color05;
-
-        &:hover {
-            background: lighten($color05, $amount: 10);
-        }
+    picture {
+        text-align: center;
     }
 }
 
-picture {
-    width: 60vw;
-    text-align: center;
+@media only screen and (max-width: 768px) {
+    #home {
+        flex-direction: column;
+
+        .container-da-home {
+            button {
+                margin-bottom: 100px;
+            }
+        }
+    }
 }
