--- a/css/_tarefas.scss
+++ b/css/_tarefas.scss
@@ -2,14 +2,14 @@
     background: $color09;
     height: 100vh;
     width: 15vw;
+    min-width: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
+    padding: 20px 30px;
 
     .area-de-dias {
-        height: 100%;
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -23,30 +23,31 @@
             justify-content: center;
             background: $color02;
             text-align: center;
-            min-height: 180px;
-            width: 12vw;
+            min-height: 150px;
+            width: 100%;
             border-radius: 20px;
-            font-size: 1.2rem;
+            font-size: 1.5rem;
             margin: 10px 0px;
 
             .hoje {
                 background: $color04;
                 line-height: 30px;
-                width: 8vw;
+                width: 70%;
                 margin-top: 10px;
                 border-radius: 20px;
-                font-size: 1rem;
+                font-size: 1.5rem;
             }
         }
     }
 
     #adicionar-de-dias {
         background: $color06;
-        height: 50px;
-        width: 50px;
+        height: 40px;
+        width: 40px;
         border-radius: 40px;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 1.5rem;
+        font-weight: bolder;
 
         &:hover {
             background: lighten($color06, $amount: 10);
@@ -69,7 +70,7 @@
         height: 95%;
         width: 95%;
         background: $color03;
-        padding: 20px;
+        padding: 20px 0px;
 
         .titulo-de-tarefas {
             display: flex;
@@ -79,10 +80,11 @@
             justify-content: center;
             text-align: center;
             height: 150px;
+            min-width: 260px;
             width: 20vw;
             border-radius: 20px;
-            font-size: 1.5rem;
-            margin-bottom: 2%;
+            font-size: 2rem;
+            margin-bottom: 5%;
         }
 
         .tarefas {
@@ -92,22 +94,22 @@
 
             .task {
                 background: $color04;
-                height: 120px;
+                height: 20%;
                 width: 100%;
                 border-radius: 30px;
                 display: flex;
                 align-items: center;
-                font-size: 1.2rem;
-                padding: 10px;
-                margin-bottom: 20px;
+                font-size: 1.5rem;
+                padding: 1%;
+                margin-bottom: 2%;
 
                 h1 {
                     display: flex;
                     align-items: center;
                     justify-content: center;
                     text-align: center;
-                    height: 100px;
-                    width: 25%;
+                    height: 100%;
+                    width: 20%;
                     padding: 0px 10px;
                     word-wrap: break-word;
 
@@ -122,7 +124,7 @@
                     align-items: center;
                     justify-content: center;
                     background-color: $color03;
-                    height: 100px;
+                    height: 100%;
                     width: 60%;
                     text-align: center;
                     border-radius: 30px;
@@ -153,15 +155,72 @@
         }
 
         #adicionar-de-tarefas {
-            height: 5vh;
-            width: 20vw;
-            font-size: 1.2rem;
+            height: 80px;
+            width: 30%;
+            font-size: 2rem;
             background: $color06;
             border-radius: 20px;
             margin-bottom: 50px;
 
             &:hover {
                 background: lighten($color06, $amount: 10);
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    html {
+        font-size: 50%;
+    }
+
+    body {
+        flex-direction: column;
+    }
+
+    .container-de-dias {
+        height: 30vh;
+        width: 100vw;
+        align-items: center;
+        padding: 10px;
+
+        .area-de-dias {
+            flex-direction: row;
+            padding: 0;
+            overflow-x: auto;
+
+            .dia {
+                min-height: 18vh;
+                min-width: 100px;
+                margin: 0px 10px;
+            }
+        }
+    }
+
+    .container-de-tarefas {
+        height: 80vh;
+        width: 100vw;
+
+        .area-de-tarefas {
+
+            .tarefas {
+                width: 95%;
+
+                .task {
+                    width: 100%;
+
+                    .editor,
+                    .removedor {
+                        height: 60%;
+                        width: 8%;
+                    }
+                }
+            }
+
+            #adicionar-de-tarefas {
+                font-size: 1.5rem;
+                width: 60%;
+                margin-bottom: 5px;
             }
         }
     }
